--- a/src/app/edit/postagem-editar/postagem-editar.component.html
+++ b/src/app/edit/postagem-editar/postagem-editar.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
 
-        <div class="row d-flex justify-content-center ">
+        <div class="row d-flex justify-content-center mt-5">
             <div class="col-md-6">
 
                 <div class="form-group campo">
@@ -22,15 +22,15 @@
                     <label for="texto">Texto</label>
                 </div>
 
-                <div class="form-group ">
-                    <label for="texto">Escolha tema ou <a routerLink='/tema' data-dismiss="modal"> cadastre um novo</a>: </label>
+                <div class="form-group campo">
+                    <label for="texto">Escolha tema:</label>
 
-                    <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema() '>
+                    <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
                         <option value="{{temaList.id}}" *ngFor='let temaList of listarTemas'>{{temaList.descricao}}</option>
                     </select>
                 </div>
 
-                <div class="d-flex justify-content-center mb-5">
+                <div class="d-flex justify-content-center mt-5 mb-5">
 
                     <button class="btn button1 mr-5 px-5" routerLink='/inicio'>Cancelar</button>
                     <button class="btn button2 px-5" (click)='atualizar()'>Atualizar</button>
