--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -39,79 +39,107 @@
         </nav>
 
         <div class="tab-content mb-3 mt-5" id="myTabContent">
+
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
                 <!-- <h1 class="ediText">Todas postagens</h1> -->
-                <div class="card-columns">
 
-                    <div class="card border-dark mb-3" style="max-width: 18rem;">
-
-                        <div class="card-text" *ngFor='let itens of listaPostagens'>
-                            <!-- os valores itens.usuario.nome está buscando na model Postagem no FK de Usuario o atributo nome  -->
-                            <div class="card-header">
-                                <p class="card-text"><small class="text-muted">Por: {{itens.usuario.nome}}</small></p>
-                            </div>
-
-                            <div class="card-body text-dark m-0">
-                                <h5 class="card-title mb-3">{{itens.titulo}}</h5>
-                                <small class="text-muted">Tema: {{itens.tema.descricao}}</small>
-                                <p class="card-text">{{itens.texto}}</p>
-                                <p class="card-text"><small class="text-muted">Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} </small></p>
-                            </div>
+                <div class=" row d-flex justify-content-center  mt-5 mb-5">
+                    <div class="col-md-4">
+                        <div class="form-group campo">
+                            <input type="text" class="form-control bg-light" id="titulo" placeholder="Digite um titulo de pesquisa" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-md-12  d-flex justify-content-center card-columns">
+                    <div class="card caixaPostagem mb-3 " style="max-width: 50rem;">
 
+                        <div class="card-text" *ngFor='let itens of listaPostagens | orderBy : key : reverse'>
+
+                            <!-- os valores itens.usuario.nome está buscando na model Postagem no FK de Usuario o atributo nome  -->
+                            <div class="card-header caixaAltor">
+                                <p class="card-text"><small class="text-white">Por: {{itens.usuario.nome}}</small></p>
+                            </div>
+
+                            <div class="card-body  m-0">
+                                <h5 class="card-title text-center mb-3">{{itens.titulo}}</h5>
+                                <small class="text-white  text-left">Tema: {{itens.tema.descricao}}</small>
+                                <p class="card-text textoP mt-3">{{itens.texto}}</p>
+                                <p class="card-text"><small class="text-white">Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} </small></p>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
             <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
                 <!-- ! <h1 class="ediText">Minhas postagens</h1> -->
-                <div class="card-columns">
-                    <div class="card border-dark mb-3" style="max-width: 18rem;">
-                        <div class="card-text" *ngFor='let itens of usuarioFK.postagem'>
-                            <div class="card-body text-dark ">
-                                <h5 class="card-title m-0">{{itens.titulo}}</h5>
-                                <!-- <small class="text-muted mb-3">Tema: {{itens.tema.descricao}}</small> -->
-                                <p class="card-text mt-3">{{itens.texto}}</p>
+                <div class="col-md-12  d-flex justify-content-center card-columns ">
+                    <div class="card caixaPostagem mb-3 " style="max-width: 50rem;">
+                        <div class="card-text mt-3" *ngFor='let itens of usuarioFK.postagem | orderBy : key : reverse'>
+                            <div class="card-body text-dark">
+                                <h5 class="card-title text-center m-0">{{itens.titulo}}</h5>
+                                <!-- <small class="text-muted text-left mb-3">Tema: {{itens.tema.descricao}}</small> -->
+                                <p class="card-text textoP mt-3">{{itens.texto}}</p>
                                 <p class="card-text">
-                                    <small class="text-muted">                                    
+                                    <small class="text-white">                                    
                                     Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} 
                                     </small>
                                 </p>
+                                <div class="d-flex justify-content-center">
 
-                                <button type="submit" class=" btn  buttonEdi1  mr-3" [routerLink]="['/postagem-edit', itens.id]">Editar</button>
-                                <button type="submit" class=" btn  buttonEdi2 " [routerLink]="['/postagem-delete', itens.id]">Apagar</button>
+                                    <button type="submit" class=" btn  buttonEdi1  mr-3" [routerLink]="['/postagem-edit', itens.id]">Editar</button>
+                                    <button type="submit" class=" btn  buttonEdi2 " [routerLink]="['/postagem-delete', itens.id]">Apagar</button> </div>
                             </div>
+                            <hr>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
+            <div class="tab-pane fader" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
                 <!-- <h1 class="ediText">Tema</h1> -->
-
-                <div class="card-columns" *ngFor='let temas of listaTemas'>
-                    <div class="card border-dark mb-3" style="max-width: 18rem;">
-                        <div class="card-text" *ngFor='let itens of temas.postagem'>
-                            <div class="card-body text-dark ">
-                                <h5 class="card-title m-0">{{itens.titulo}}</h5>
-                                <p class="card-text mt-3">{{itens.texto}}</p>
-                                <p class="card-text">
-                                    <small class="text-muted">                                    
-                                    Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} 
-                                    </small>
-                                </p>
-                            </div>
-
+                <div class=" row d-flex justify-content-center  mt-5 ">
+                    <div class="col-md-4">
+                        <div class="form-group campo">
+                            <input type="text" class="form-control bg-light" id="titulo" placeholder="Digite uma descricao pesquisa" [(ngModel)]='temaDescricao' (keyup)='findByTemaDscricao()'>
                         </div>
-
-
                     </div>
                 </div>
+                <div class="card-columns col-md-12  d-flex justify-content-center " *ngFor='let temas of listaTemas'>
+                    <!-- <h2 class="text-white  text-left">Tema: {{itens.tema.descricao}}</h2> -->
+                    <div class="caixaTest  mt-5">
+                        <div class=" text-center tema">
+                            <h2 class="text-dark">Tema: {{temas.descricao}}</h2>
+                        </div>
 
+                        <div class="card  d-flex justify-content-center mb-3 caixaPostagem mt-5" style="max-width: 50rem;">
+                            <div class=" card-text  " *ngFor='let itens of temas.postagem | orderBy : key : reverse'>
+                                <div class="card-header caixaAltor">
+                                    <p class="card-text"><small class="text-white">Por: {{itens.usuario.nome}}</small></p>
+                                </div>
+                                <div class="card-body text-dark ">
+                                    <h5 class="card-title text-center m-0">{{itens.titulo}}</h5>
+                                    <!-- não esta trazendo o tema -->
+                                    <!-- <small class="text-white  text-left">Tema: {{itens.tema.descricao}}</small> -->
+                                    <p class="card-text textoP mt-3">{{itens.texto}}</p>
+                                    <p class="card-text">
+                                        <small class="text-white">                                    
+                                    Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} 
+                                    </small>
+                                    </p>
+                                </div>
+                                <hr>
+                            </div>
+                        </div>
+
+                        <!-- fim teste -->
+                    </div>
+
+                </div>
             </div>
-
         </div>
-
     </div>
 
     <!-- Modal -->
@@ -126,8 +154,8 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group campo">
-                        <input type="text" class="form-control" id="titulo" required [(ngModel)]='postagem.titulo '>
-                        <label for="titulo">Título</label>
+                        <input type="text" class="form-control text-center" id="titulo" required [(ngModel)]='postagem.titulo '>
+                        <label for="titulo ">Título</label>
                     </div>
 
                     <div class="form-group campo">
@@ -136,7 +164,7 @@
                     </div>
 
                     <div class="form-group ">
-                        <label for="texto">Escolha tema ou <a routerLink='/tema' data-dismiss="modal"> cadastre um novo</a>: </label>
+                        <label for="texto">Escolha tema  <a routerLink='/tema' data-dismiss="modal" *ngIf='authService.adm()'> / cadastre um novo</a>: </label>
 
                         <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
                             <option value="{{temaList.id}}" *ngFor='let temaList of listaTemas'>{{temaList.descricao}}</option>
@@ -151,6 +179,5 @@
             </div>
         </div>
     </div>
-
 
 </body>
