--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,13 +8,13 @@
             <ul class="navbar-nav mr-auto d-flex align-items-center">
                 <li class="nav-item active">
 
-                    <img src="{{foto_perfil }}" alt="imagem do usuario" width="50px" height="50px" class="img-fluid rounded-circle">
+                    <img src="{{foto_perfil}}" alt="imagem do usuario" width="50px" height="50px" class="img-fluid rounded-circle">
                 </li>
                 <li class=" nav-item pl-3">
-                    <p class="m-0 font-weight-bold  "> {{nome}}</p>
+                    <p class="m-0 font-weight-bold"> {{nome}}</p>
                 </li>
                 <li class=" nav-item pl-3">
-                    <a href="">
+                    <a [routerLink]="['/usuario-edit', id]">
                         <p class="m-0  ">
                             <i class="fa fa-pencil-square-o " aria-hidden="true"></i>
                         </p>
