--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -77,6 +77,7 @@
                 <!-- ! <h1 class="ediText">Minhas postagens</h1> -->
                 <div class="col-md-12  d-flex justify-content-center card-columns ">
                     <div class="card caixaPostagem mb-3 " style="max-width: 50rem;">
+
                         <div class="card-text mt-3" *ngFor='let itens of usuarioFK.postagem | orderBy : key : reverse'>
                             <div class="card-body text-dark">
                                 <h5 class="card-title text-center m-0">{{itens.titulo}}</h5>
@@ -164,10 +165,9 @@
                     </div>
 
                     <div class="form-group ">
-                        <label for="texto">Escolha tema  <a routerLink='/tema' data-dismiss="modal" *ngIf='authService.adm()'> / cadastre um novo</a>: </label>
-
-                        <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
-                            <option value="{{temaList.id}}" *ngFor='let temaList of listaTemas'>{{temaList.descricao}}</option>
+                        <label for="tema">Escolha tema  <a routerLink='/tema' data-dismiss="modal" *ngIf='authService.adm()'> / cadastre um novo</a>: </label>
+                        <select name="tema" id="tema" class="form-control " [(ngModel)]='idTema' (change)='findByIdTema()'>
+                            <option class="text-dark" value="{{temaList.id}}" *ngFor='let temaList of listaTemas'>{{temaList.descricao}}</option>
                         </select>
                     </div>
 
